--- a/src/app/modules/editar-producto/editar-producto.component.css
+++ b/src/app/modules/editar-producto/editar-producto.component.css
@@ -53,3 +53,37 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
 }
+
+
+
+table {
+  margin-left: 15px;
+  width: 95%;
+  border-collapse: collapse;
+  font-size: 1em;
+  font-family: Arial, sans-serif;
+}
+
+
+thead tr {
+  background-color: #ffffff;
+  color: #000000;
+  text-align: left;
+}
+
+th,
+td {
+  padding: 12px 15px;
+}
+
+tbody tr {
+  border-bottom: 1px solid #ffffff;
+}
+
+tbody tr:nth-of-type(even) {
+  background-color: #ffffff;
+}
+
+tbody tr:last-of-type {
+  border-bottom: 2px solid #d8d8d8;
+}
