--- a/src/app/modules/productos/productos.component.css
+++ b/src/app/modules/productos/productos.component.css
@@ -108,3 +108,11 @@ table {
   100% { transform: rotate(360deg); }
 }
 
+
+.custom-icon {
+  font-size: 16px;
+  color: #999999; /* Cambia el color según lo desees */
+  /* Agrega otros estilos CSS según sea necesario */
+  margin-left: 10px;
+  margin-top: 5px;
+}
