--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -13,8 +13,8 @@
                   (click)="crearProducto()"
                   style="background-color: #fd9727; font-size: 16px"
                   [disabled]="!habilitarBoton">
-            <mat-icon>add</mat-icon>
-            AGREGAR PRODUCTO
+           
+            AGREGAR/EDITAR
             </button>
 
          </div>
@@ -29,62 +29,63 @@
             />
          </mat-form-field>
          <div  class="table-container">
-               <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-                  <ng-container matColumnDef="nombre">
-                     <th mat-header-cell *matHeaderCellDef> Producto </th>
-                     <td mat-cell *matCellDef="let producto"> 
-                        {{ producto.nombreProducto }}, {{ producto.marca }} - {{ producto.detalleCompra }} 
-                      </td>                 
-                  </ng-container>
-    
-                  <ng-container matColumnDef="existencia">
-                   <th mat-header-cell *matHeaderCellDef> Existencia </th>
-                   <td mat-cell *matCellDef="let producto" class="custom-cell">
-                     <span [ngStyle]="{'background-color': (producto.existencia == 0 || producto.existencia == null) ? '#a30000' : '#00aa1c'}">
-                       {{ producto.existencia == null ? '00' : producto.existencia }}
-                     </span>
-                   </td>
-                 </ng-container>
-                 
-                  <ng-container matColumnDef="estatus">
-                     <th mat-header-cell *matHeaderCellDef> Estatus </th>
-                     <td mat-cell *matCellDef="let producto">
-                        {{ producto.activo == '1' ? 'Activo' : 'Inactivo' }}
-                     </td>
-                  </ng-container>
-    
-                  <ng-container matColumnDef="categoria">
-                     <th mat-header-cell *matHeaderCellDef> Categoría </th>
-                     <td mat-cell *matCellDef="let producto"> {{ producto.nombreCategoria}} </td>
-                  </ng-container>
-    
-    
-                  <ng-container matColumnDef="acciones" *ngIf="isAdmin()">
-                   <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                   <td mat-cell *matCellDef="let producto">
-                     <!-- Verificar si el valor de id_bodega está presente -->
-                     <ng-container *ngIf="producto.existencia; else iconoNoIdBodega">
-                       <button mat-icon-button color="primary" (click)="editarProducto(producto.idProbob)"  [disabled]="!habilitarBoton">
-                         <mat-icon>edit</mat-icon>
-                       </button>
-                     </ng-container>
-                     <!-- Si no hay valor de id_bodega, mostrar un icono de prohibido -->
-                     <ng-template #iconoNoIdBodega>
-                       <mat-icon color="warn">block</mat-icon>
-                     </ng-template>
-                   </td>
-                 </ng-container>
-                 <ng-container matColumnDef="acciones" *ngIf="isRecep()">
-                   <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                   <td mat-cell *matCellDef="let producto">
-                     <ng-container >
-                      <mat-icon color="warn">block</mat-icon>
-                     </ng-container>
-                   </td>
-                 </ng-container>
-                  <tr mat-header-row *matHeaderRowDef="['nombre', 'existencia', 'estatus', 'categoria', 'acciones']"></tr>
-                  <tr mat-row *matRowDef="let row; columns: ['nombre','existencia', 'estatus', 'categoria', 'acciones'];"></tr>
-               </table>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+               <!-- Definición de columnas -->
+               <ng-container matColumnDef="nombre">
+                  <th mat-header-cell *matHeaderCellDef (click)="sortData('nombre')">
+                    <div style="display: flex; align-items: center;">
+                      <span>Producto</span>
+                      <mat-icon *ngIf="sortField !== 'nombre'" class="custom-icon">unfold_more</mat-icon>
+                      <mat-icon *ngIf="sortField === 'nombre'" class="custom-icon" style="margin-left: 5px;">
+                        {{ sortDirection === 'asc' ? 'arrow_upward' : 'arrow_downward' }}
+                      </mat-icon>
+                    </div>
+                  </th>
+                  <td mat-cell *matCellDef="let producto">
+                    {{ producto.nombreProducto }}, {{ producto.marca }} - {{ producto.detalleCompra }}
+                  </td>
+                </ng-container>
+                
+             
+               <ng-container matColumnDef="existencia">
+                 <th mat-header-cell *matHeaderCellDef> Existencia </th>
+                 <td mat-cell *matCellDef="let producto" class="custom-cell">
+                   <span [ngStyle]="{'background-color': (producto.existencia == 0 || producto.existencia == null) ? '#a30000' : '#00aa1c'}">
+                     {{ producto.existencia == null ? '00' : producto.existencia }}
+                   </span>
+                 </td>
+               </ng-container>
+             
+              <!-- <ng-container matColumnDef="estatus">
+                 <th mat-header-cell *matHeaderCellDef> Estatus </th>
+                 <td mat-cell *matCellDef="let producto"> {{ producto.activo == '1' ? 'Activo' : 'Inactivo' }} </td>
+               </ng-container>-->
+             
+               <ng-container matColumnDef="categoria">
+                 <th mat-header-cell *matHeaderCellDef> Categoría </th>
+                 <td mat-cell *matCellDef="let producto"> {{ producto.nombreCategoria}} </td>
+               </ng-container>
+             
+               <!-- Columna de acciones -->
+               <ng-container matColumnDef="acciones">
+                 <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                 <td mat-cell *matCellDef="let producto">
+                   <!-- Verificar el rol del usuario y mostrar las acciones correspondientes -->
+                   <ng-container *ngIf="isAdmin() && producto.existencia; else iconoNoIdBodega">
+                     <button mat-icon-button color="primary" (click)="editarProducto(producto.idProbob)" [disabled]="!habilitarBoton">
+                       <mat-icon>edit</mat-icon>
+                     </button>
+                   </ng-container>
+                   <ng-template #iconoNoIdBodega>
+                     <mat-icon color="warn">block</mat-icon>
+                   </ng-template>
+                 </td>
+               </ng-container>
+             
+               <!-- Definición de filas -->
+               <tr mat-header-row *matHeaderRowDef="['nombre', 'existencia', 'categoria', 'acciones']"></tr>
+               <tr mat-row *matRowDef="let row; columns: ['nombre', 'existencia', 'categoria', 'acciones'];"></tr>
+             </table>
          </div>
          <mat-paginator #paginator
             [pageSizeOptions]="[5, 10, 15, 20]"
