--- a/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
+++ b/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
@@ -139,9 +139,13 @@
               <mat-icon style="color:red">timer_off</mat-icon>
             </ng-container>
           </ng-container>
+
           <ng-container *ngIf="column === 'Eliminar'">
-            <button mat-icon-button color="warn"  (click)="borrarSucursal(memCli.idDetMem)">
+            <button *ngIf="isAdmin()" mat-icon-button color="warn"  (click)="borrarSucursal(memCli.idDetMem)">
               <mat-icon>delete</mat-icon>
+            </button>
+            <button *ngIf="isRecep()" mat-icon-button color="warn" >
+              <mat-icon>block</mat-icon>
             </button>
          </ng-container>
         </td>
