--- a/src/app/modules/ventas/ventas.component.html
+++ b/src/app/modules/ventas/ventas.component.html
@@ -7,6 +7,8 @@
          </button>
        </div>
    </div>
+
+
    <div  mat-dialog-content [ngClass]="{'maximized': isMaximized}">
       <div>
          <br>
@@ -14,15 +16,16 @@
          <mat-form-field class="full-width">
             <mat-label>Filtro</mat-label>
             <input
-            matInput
-            (input)="handleFilterInput($event)"
+            matInput 
             (keyup)="applyFilter($event)"
             placeholder="Busca por columnas"
             #input
             />
          </mat-form-field>
+         
          <div class="table-container">
-            <table *ngIf="showTable" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <!--<table *ngIf="showTable" mat-table [dataSource]="filteredDataSource" class="mat-elevation-z8">
+
                <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
                  <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
                  <td mat-cell *matCellDef="let prod">
@@ -48,7 +51,7 @@
              </table>
              
 
-            <mat-paginator #paginator [pageSizeOptions]="[3, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>
+            <mat-paginator #paginator [pageSizeOptions]="[3, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>-->
          </div>
          <div class="resumen">
             <h1>Resumen de Compra</h1>
