--- a/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
+++ b/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
@@ -1,4 +1,6 @@
-
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true">
+    <p style="color: white" > Cargando... </p>
+ </ngx-spinner>
 <h1 mat-dialog-title class="title">Pagar Membresia</h1>
 <div mat-dialog-content>
     <form>
