--- a/src/app/modules/entradas/entradas.component.html
+++ b/src/app/modules/entradas/entradas.component.html
@@ -157,7 +157,7 @@
             <div class="col-sm-2">
                <button type="button" mat-raised-button (click)="agregarATabla()" style="margin-top: 10px;background-color: #fde49c; width: 100%; height: 35px;" [disabled]="!habilitarBoton">
                   <mat-icon>add</mat-icon>
-                  Agregar
+                  Añadir
                </button>
             </div>
             </div> 
