--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,132 +1,124 @@
 <div class="custom-spinner-container" *ngIf="isLoading">
     <div class="custom-spinner">
-        <div class="spinner-circle"></div>
-        <div class="spinner-text">Cargando...</div>
+       <div class="spinner-circle"></div>
+       <div class="spinner-text">Cargando...</div>
     </div>
-</div>
-<div *ngIf="!isLoading">
+ </div>
+ <div *ngIf="!isLoading">
     <div style="margin-top: 60px;">
-    <mat-card *ngIf="isAdmin() || isRecep()">
-        <mat-card-content>
-            <div class="dashboard-cards">
-                <mat-card class="orange-card" *ngFor="let card of homeCard">
-                    <mat-card-header>
-                        <mat-card-title>{{card.titulo}}</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <br>
-                        <div class="row">
-                            <div class="col-sm-5">
-                                <img src="https://olympus.arvispace.com/olimpusGym/assets/img/{{card.icono}}" alt="icnono" class="card-image">
+       <mat-card *ngIf="isAdmin() || isRecep()">
+          <mat-card-content>
+             <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4" *ngFor="let card of homeCard">
+                   <mat-card class="orange-card">
+                      <mat-card-header>
+                         <mat-card-title>{{card.titulo}}</mat-card-title>
+                      </mat-card-header>
+                      <mat-card-content>
+                        <!--col-8: Esta clase hace que la columna ocupe 8 de las 12 columnas disponibles en todos los tamaños de pantalla, desde el tamaño más pequeño hasta el más grande.-->
+                         <br>
+                         <div class="row">
+                            <div class="col-4 d-flex align-items-center justify-content-center">
+                               <img src="https://olympus.arvispace.com/olimpusGym/assets/img/{{card.icono}}" alt="icnono" class="img-fluid card-image">
                             </div>
-                            <div class="col-sm-7">
-                                <br>
-                                <p style="color: rgb(0, 0, 0); font-size: 30px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
+                            <div class="col-8">
+                               <br>
+                               <p style="color: rgb(0, 0, 0); font-size: 25px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
                             </div>
-                        </div>
-                    </mat-card-content>
-                </mat-card>
-            </div>
-        </mat-card-content>
+                         </div>
+                      </mat-card-content>
+                   </mat-card>
+                </div>
+             </div>
+          </mat-card-content>
+       </mat-card>
+       <mat-card *ngIf="isAdmin() || isRecep()">
+          <mat-card-content>
+             <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4" *ngFor="let card of homeCard2">
+                   <mat-card class="orange-card">
+                      <mat-card-header>
+                         <mat-card-title>{{card.titulo}}</mat-card-title>
+                      </mat-card-header>
+                      <mat-card-content>
+                         <br>
+                         <div class="row">
+                            <div class="col-4 d-flex align-items-center justify-content-center">
+                               <img src="https://olympus.arvispace.com/olimpusGym/assets/img/{{card.icono}}" alt="icono" class="img-fluid card-image">
+                            </div>
+                            <div class="col-8">
+                               <p style="color: rgb(0, 0, 0); font-size: 18px; font-family: Verdana, Geneva, Tahoma, sans-serif;">{{ card.cantidad }}</p>
+                               <p style="color: rgb(0, 0, 0); font-size: 18px; font-family: Verdana, Geneva, Tahoma, sans-serif;">{{ card.cantidadM }}</p>
+                            </div>
+                         </div>
+                      </mat-card-content>
+                   </mat-card>
+                </div>
+             </div>
+          </mat-card-content>
+       </mat-card>
+       <mat-card *ngIf="isAdmin() || isRecep()">
+          <mat-card-header>
+             <h3 class="icon-title">
+                <mat-icon class="icon">grid_view</mat-icon>
+                PRODUCTOS MÁS VENDIDOS
+             </h3>
+          </mat-card-header>
+          <mat-card-content>
+             <p style="border-top: 2px solid orange;"></p>
+             <div *ngIf="tablaHTML" [innerHTML]="tablaHTML ">
+    </div>
+    </mat-card-content>
+    <!-- <mat-card class="ancho-2">
+       <mat-card-header>
+           <h3 class="icon-title">
+               <mat-icon class="icon">grid_view</mat-icon>
+               ÚLTIMAS VENTAS
+           </h3>
+       </mat-card-header>
+       <mat-card-content>
+           <p style="border-top: 2px solid orange;"></p>
+           <div *ngIf="tablaHTMLVentas" [innerHTML]="tablaHTMLVentas"></div>
+       </mat-card-content>
+       </mat-card>-->
     </mat-card>
-
-
     <mat-card *ngIf="isAdmin() || isRecep()">
-        <mat-card-content>
-            <div class="dashboard-cards2">
-                <mat-card class="orange-card" *ngFor="let card of homeCard2">
-                    <mat-card-header>
-                        <mat-card-title>{{card.titulo}}</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <br>
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <br>
-                                <img src="https://olympus.arvispace.com/olimpusGym/assets/img/{{card.icono}}" alt="icnono" class="card-image" style="width: 90%;" >
-                            </div>
-                            <div class="col-sm-8">
-                                <br>
-                                <p style="color: rgb(0, 0, 0); font-size: 20px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
-                                <p style="color: rgb(0, 0, 0); font-size: 20px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidadM }}</p>
-                            </div>
-                        </div>
-                    </mat-card-content>
-                </mat-card>
-            </div>
-        </mat-card-content>
-    </mat-card>
-
-    <mat-card *ngIf="isAdmin() || isRecep()">
-
-                                <mat-card-header>
-                                    <h3 class="icon-title">
-                                        <mat-icon class="icon">grid_view</mat-icon>
-                                        PRODUCTOS MÁS VENDIDOS
-                                    </h3>
-                                </mat-card-header>
-                                <mat-card-content>
-                                    <p style="border-top: 2px solid orange;"></p>
-                                    <div *ngIf="tablaHTML" [innerHTML]="tablaHTML "></div>
-
-                                </mat-card-content>
-                       
-                           <!-- <mat-card class="ancho-2">
-                                <mat-card-header>
-                                    <h3 class="icon-title">
-                                        <mat-icon class="icon">grid_view</mat-icon>
-                                        ÚLTIMAS VENTAS
-                                    </h3>
-                                </mat-card-header>
-                                <mat-card-content>
-                                    <p style="border-top: 2px solid orange;"></p>
-                                    <div *ngIf="tablaHTMLVentas" [innerHTML]="tablaHTMLVentas"></div>
-                                </mat-card-content>
-                            </mat-card>-->
-
-
-    </mat-card>
-
-    <mat-card *ngIf="isAdmin() || isRecep()">
-        <mat-card-header>
-            <h3 class="icon-title">
-                <mat-icon class="icon">people</mat-icon>
-                LISTA DE ASISTENCIA
-            </h3>
-        </mat-card-header>
-        <mat-card-content>
-            <p style="border-top: 2px solid orange;"></p>
-        </mat-card-content>
-       
-        <div  class="table-container">
-            <table mat-table [dataSource]="dataSource" >
-            <ng-container matColumnDef="title">
+       <mat-card-header>
+          <h3 class="icon-title">
+             <mat-icon class="icon">people</mat-icon>
+             LISTA DE ASISTENCIA
+          </h3>
+       </mat-card-header>
+       <mat-card-content>
+          <p style="border-top: 2px solid orange;"></p>
+       </mat-card-content>
+       <div  class="table-container">
+          <table mat-table [dataSource]="dataSource" >
+             <ng-container matColumnDef="title">
                 <th mat-header-cell *matHeaderCellDef>Nombre</th>
                 <td mat-cell *matCellDef="let item">{{ item.nombre }}</td>
-            </ng-container>
-            <ng-container matColumnDef="details">
+             </ng-container>
+             <ng-container matColumnDef="details">
                 <th mat-header-cell *matHeaderCellDef>Hora de entrada</th>
                 <td mat-cell *matCellDef="let item">{{ item.fechaHoraEntrada }}</td>
-            </ng-container>
-            <ng-container matColumnDef="price">
+             </ng-container>
+             <ng-container matColumnDef="price">
                 <th mat-header-cell *matHeaderCellDef>Membresia</th>
                 <td mat-cell *matCellDef="let item">{{ item.membresia }}</td>
-            </ng-container>
-            <ng-container matColumnDef="rol">
+             </ng-container>
+             <ng-container matColumnDef="rol">
                 <th mat-header-cell *matHeaderCellDef>Rol</th>
                 <td mat-cell *matCellDef="let item">{{ item.rol }}</td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let item; columns: displayedColumns; let i = index"></tr>
-            </table>
-            <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>
-        </div>
-
+             </ng-container>
+             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+             <tr mat-row *matRowDef="let item; columns: displayedColumns; let i = index"></tr>
+          </table>
+          <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>
+       </div>
     </mat-card>
-    </div>
-   <!--<div>
-        <br>
-        <button (click)="Sincronizar()">Sincronizar</button>
+ </div>
+ <!--<div>
+    <br>
+    <button (click)="Sincronizar()">Sincronizar</button>
     </div>-->
-</div>
-
+ </div>
