--- a/src/app/modules/ventas/ventas.component.html
+++ b/src/app/modules/ventas/ventas.component.html
@@ -1,4 +1,8 @@
 <div >
+   <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true">
+      <p style="color: white" > Cargando... </p>
+   </ngx-spinner>
+   
    <div class="title header-container"  mat-dialog-title>
       <label class="ventas-label">VENTAS</label>
    </div>
