cambios de registro

--- a/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
+++ b/src/app/modules/form-pago-emergente/form-pago-emergente.component.html
@@ -41,7 +41,7 @@
                 </mat-form-field>
             </div>
         </div>
-        <div class="row">
+       <!---- <div class="row">
             <div class="col-sm-6">
                 <mat-form-field appearance="outline" style="width: 100%;" required>
                   <mat-label>Fecha inicio:</mat-label>
@@ -58,7 +58,7 @@
                     <mat-datepicker #picker2></mat-datepicker>
                 </mat-form-field>
             </div>
-        </div>
+        </div>-->
        <br>
         <div class="row">
             <div class="col-sm-3">
